# llm_devtale

./: .gitignore  Justfile  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml  python-test.yml
llm-devtale/: config.py  main.py  node.py  parser.py  templates.py  utils.py
llm_devtale/: __init__.py  config.py  main.py  node.py  parser.py
tests/: conftest.py  test_cli.py  test_files.py  test_gitutils.py  test_node.py  test_parser.py  test_utils.py
